= CHANGES

== 0.9.28 (Not Yet Released)

* Fixed couchrest Account Model
* Generate SystemTimer for Mongoid only if Ruby 1.8 [Thanks to RoryO]
* Generate SystemTimer for Mongomapper only if Ruby 1.8
* Add `padrino s` as alias for `padrino start`
* Fixed Gemfile for couchrest
* Updated Gemfile for mongoid
* Fix a possible loop in require_dependencies

== 0.9.27

* Use sass gem, because now is separated from haml
* Escape regex in our reloader
* Use CouchRest::Model instead of CouchRest::ExtendedDocument [Thanks Burgestrand!]
* Fixes issues with offline generation of js (from padrino-static)
* Fixes YAML parsing bug by using syck
* Use sinatra 1.2.5
* Make logger sinatra 1.3 compat
* Use new sqlite3 gem in generated projects
* Removed padrino_logging and use instead simple logging to avoid conflicts
* By default use logging only on development
* Uses raise_errors, dump_errors, show_exceptions as Sinatra::Base do
* Refactored Padrino::Application
* Added a global configuration in config/apps.rb used by each Padrino Applicaitons
* Moved session_secret in global configuration project
* Use SecureRandom to generate session secret
* Support 'partial' in Sinatra with explicit engine
* Added recognize_path method ex: recognize_path(request.referrer) => [:controller_action, { :id => 1 }]
* Added current_path method ex: current_path(:merge => :param) => "/current/1234/merge/param"
* Support for jruby-memcache-client/memcache-client
* Added MongoMapper task for drop database

== 0.9.26

* Padrino::Logger compatible with Rack::CommonLogger
* Added session_path and ability to use custom Rack::Session::Cookie options
* Fixed dependency loader
* Fixed mounting sub-apps
* Fixed shared sessions

== 0.9.25

* Fixes to allow flexible libraries in padrino-cache
* Allow select tag to take a range of options [Thanks activestylus]
* Allow grouped options in a select_tag [Thanks activestylus]
* Use MongoMapper official gem
* Fixes ERBHandler type detection