@@ -64,3 +64,16 @@ namespace :routes do
     list_app_routes(app, args) if app
   end
 end
+
+desc "Generate the Rakefile"
+task :gen do
+  File.open(Padrino.root("Rakefile"), "w") do |file|
+    file.puts <<-RUBY.gsub(/^ {6}/, '')
+      require File.dirname(__FILE__) + '/config/boot.rb'
+      require 'thor'
+      require 'padrino-core/cli/rake'
+
+      PadrinoTasks.init
+    RUBY
+  end
+end
